# my-blog

./: .dockerignore  .gitignore  README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  dockerfile  makefile  myblog.service
backend/: .env  .env.dev  .env.example  .gitignore  Cargo.toml  dockerfile
backend/src/: main.rs
backend/src/config/: database.rs
backend/src/controller/: auth_controller.rs  mod.rs  post_controller.rs  post_cover_controller.rs
backend/src/entities/: mod.rs
backend/src/entities/io/input/: auth_entity.rs  mod.rs  post_cover_entity.rs  post_entity.rs  user_entity.rs
backend/src/entities/io/output/: api_entity.rs  auth_entity.rs  error_entity.rs  mod.rs  post_cover_entity.rs  post_entity.rs
backend/src/entities/schemas/: mod.rs  post_cover_schema.rs  post_schema.rs  user_schema.rs
backend/src/fairings/: api_key.rs  mod.rs
backend/src/model/: mod.rs  post_cover_model.rs  post_model.rs  user_model.rs
backend/src/utils/: errors.rs  generic.rs  jwt.rs  mod.rs
db/: tables.sql
frontend/: babel.config.js  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.less  App.tsx  AppMobile.less
frontend/src/components/: Article.tsx  CreatePost.tsx  Footer.tsx  Header.tsx  Home.tsx  ListPosts.tsx  Login.tsx  NotFound.tsx  Render.tsx  Sidebar.tsx
frontend/src/models/: account.ts  post.ts
frontend/src/services/: apiService.ts  api_service.ts  uploader.ts
