[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json"] }
rocket = "0.5.0"
rocket_codegen = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"]}
tokio = { version = "1.36.0", features = ["full"] }