[package]
name = "my_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.24", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"]}
rocket_codegen = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono"]}
tokio = { version = "1.36.0", features = ["full"] }
