[package]
name = "my_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
rocket = { version = "0.5.0", features = ["json"]}
rocket-multipart-form-data = "0.10.7"
rocket_codegen = "0.5.0"
rocket_cors = "0.6.0"
rocket_okapi = "0.8.0"
schemars = "0.8.21"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono"]}
tokio = { version = "1.36.0", features = ["full"] }
